objects/EXPRN__BIQ_Batch_Process_Schedule__c.object
<CustomObject>
    <description>Used to store queries behind the standard acount list views.</description>
    <fields>
        <fullName>EXPRN__Batch_Type__c</fullName>
        <description>Type of batch</description>
        <label>Batch Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Batch Business Update</fullName>
                </value>
                <value>
                    <fullName>Batch Scoring</fullName>
                </value>
                <value>
                    <fullName>Batch Decisioning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EXPRN__Credit_Policy__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Policy</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Date_Time_Completed__c</fullName>
        <description>Batch process completion time</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Time Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EXPRN__Date_Time_Submitted__c</fullName>
        <description>Time when batch process is submitted</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Time Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EXPRN__Query_SOQL__c</fullName>
        <description>SOQL query</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Query SOQL</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EXPRN__Scoring_Model__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Scoring Model</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Experian BIQ Batch Process Schedule</label>
    <nameField>
        <displayFormat>B-{00000}</displayFormat>
        <label>BIQ Batch Process Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Experian BIQ Batch Process Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>